--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -5,7 +5,10 @@
       <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item ">
-      <a class="nav-link" href="/<%=id%>">My Profile <span class="sr-only">(current)</span></a>
+      <a  class="nav-link" href="/<%=id%>">My Profile <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item ">
+      <a  class="nav-link" href="/logout">Log Out <span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Contact Us</a>
@@ -20,7 +23,7 @@
 </div>
 <div class="container1">
     <h1>Edit</h1>
-    <form name="" action="/" method="post">
+    <form name="" action="/<%=id%>/<%=storyid%>" method="post">
   <div class="form-group">
     <label for="title">Title</label>
     <input type="text" name="title" class="form-control" id="title"  value="<%=title%>">
@@ -30,6 +33,7 @@
     <label for="exampleFormControlTextarea1">Your Content</label>
     <textarea name="content" class="form-control" id="exampleFormControlTextarea1" rows="15" ><%=content%></textarea>
   </div>
-  <button name="id" value="<%=id%>" type="submit" class="btn btn-primary">Save</button>
+  <input type="hidden" name="username" value="<%=id%>">
+  <button name="storyid" value="<%=storyid%>" type="submit" class="btn btn-primary">Save</button>
 </form>
 <%-include("footer")-%>
