--- a/views/header.ejs
+++ b/views/header.ejs
@@ -15,13 +15,14 @@
 <body>
   <div class="full">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="/">Daily Blog</a>
   <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button> -->
   <div class=" navbar-collapse" id="navbarNav">
     <ul class="nav navbar-nav ml-auto">
-    
+      <li class="nav-item">
+
       <li class="nav-item">
         <a class="nav-link" href="#">Contact Us</a>
       </li>
