--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,30 +1,26 @@
-<%- include('header') %>
+<%-include("header1")-%>
+<div class=" navbar-collapse" id="navbarNav">
+  <ul class="nav navbar-nav ml-auto">
+    <li class="nav-item ">
+      <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item ">
+      <a class="nav-link" href="/<%=id%>">My Profile <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item ">
+      <a class="nav-link" href="/logout">Log Out<span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Contact Us</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">About Us</a>
+    </li>
 
-
-<!-- <div class="jumbotron centered">
-  <div class="container2">
-
-    <h1 class="display-3">Secrets</h1>
-    <p class="lead">Don't keep your secrets, share them asfwfewfew  else if (wffw) {
-      efwfwffwfweewrqweqqvqesdvverggegqergqhg4wg4tttttrhhhaahhdfshfdsghshhshhgfhshshghgghsgffgfshhs
-    }anonymously!</p>
-    <hr>
-    <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
-    <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
-
-  </div>
-</div> -->
-
-
-<div class="jumbotron ">
-  <div class="container">
-    <i class="fas fa-book-reader fa-6x"></i>
-    <h1 class="display-4">Fluid jumbotron</h1>
-    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-    <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
-    <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
-  </div>
+  </ul>
 </div>
-
-
-<%- include('footer') %>
+</nav>
+</div>
+<div class="container1">
+  <h1>This is the Home Page</h1>
+<%-include("footer")-%>
