--- a/views/otherspost.ejs
+++ b/views/otherspost.ejs
@@ -8,6 +8,9 @@
       <a class="nav-link" href="/<%=id%>">My Profile <span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item">
+      <li class="nav-item ">
+        <a class="nav-link" href="/logout">Log Out <span class="sr-only">(current)</span></a>
+      </li>
       <a class="nav-link" href="#">Contact Us</a>
     </li>
     <li class="nav-item">
@@ -22,7 +25,7 @@
     <form class="inputform" action="/edit" method="post">
       <h1 ><%=title%></h1>
       <p ><%=content%></p>
-    
+
 
     </form>
 <%-include("footer")-%>
