--- a/views/profilepost.ejs
+++ b/views/profilepost.ejs
@@ -7,6 +7,9 @@
     <li class="nav-item ">
       <a class="nav-link" href="/<%=id%>">My Profile <span class="sr-only">(current)</span></a>
     </li>
+    <li class="nav-item ">
+      <a class="nav-link" href="/logout">Log Out <span class="sr-only">(current)</span></a>
+    </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Contact Us</a>
     </li>
@@ -19,10 +22,10 @@
 </nav>
 </div>
 <div class="container1">
-    <form class="inputform" action="/edit" method="post">
+
       <h1 ><%=title%></h1>
       <p ><%=content%></p>
-      <button type="submit" name="id" class="btn btn-primary" value="<%=id%>">edit</button>
+    <a href="/<%=id%>/<%=storyid%>/edit"><button type="button" class="btn btn-primary" name="button">compose</button></a>
 
-    </form>
+
 <%-include("footer")-%>
