--- a/views/profilepost.ejs
+++ b/views/profilepost.ejs
@@ -23,9 +23,9 @@
 </div>
 <div class="container1">
 
-      <h1 ><%=title%></h1>
-      <p ><%=content%></p>
-    <a href="/<%=id%>/<%=storyid%>/edit"><button type="button" class="btn btn-primary" name="button">compose</button></a>
+      <h1 class="title"><%=title%></h1>
+      <p class="content"><%=content%></p>
+    <a href="/<%=id%>/<%=storyid%>/edit"><button type="button" class="btn btn-primary" name="button">Edit</button></a>
 
 
 <%-include("footer")-%>
